--- a/styles/partials/_mediaQ.scss
+++ b/styles/partials/_mediaQ.scss
@@ -6,7 +6,6 @@
       .wrapper {
         .container {
           h2 {
-            text-align: center;
             font-size: 1.8rem;
           }
         }
@@ -48,16 +47,19 @@
       }
       .wrapper {
         .container {
+          justify-content: center;
+          align-items: center;
           flex-direction: column-reverse;
-          h1 {
-            padding-top: 2.5rem;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-          }
-          h2 {
-            padding-top: 0.5rem;
+          .heroTitle {
+            width: 100%;
+            h1 {
+              padding-top: 2.5rem;
+              text-align: center;
+            }
+            h2 {
+              padding-top: 0.5rem;
+              text-align: center;
+            }
           }
         }
       }
